# expense-bot

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/expense-bot/: expense-bot.py
